--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,29 +8,28 @@ edition = "2018"
 crate-type = ["cdylib", "rlib"]
 
 [features]
-default = ["console_error_panic_hook"]
+#default = ["console_error_panic_hook, "optimize"]
+optimize = ["log/release_max_level_warn"]
 
 [dependencies]
 wasm-bindgen = "0.2.63"
+indoc = "1.0"
+time = "*"
 
-# The `console_error_panic_hook` crate provides better debugging of panics by
-# logging them with `console.error`. This is great for development, but requires
-# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
-# code size when deploying.
 console_error_panic_hook = { version = "0.1.6", optional = true }
-
-# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
-# compared to the default allocator's ~10K. It is slower than the default
-# allocator, however.
-#
-# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
 wee_alloc = { version = "0.4.5", optional = true }
+
+# Pixels Graphics
+env_logger = "0.7.1"
+log = "0.4.8"
+pixels = "0.2.0"
+winit = "0.22.0"
+winit_input_helper = "0.6.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
 
 [profile.release]
-# Tell `rustc` to optimize for small code size.
 opt-level = "s"
 debug = true
 
